sql/grammar/sql_parser.go
// Code generated from ./sql/grammar/SQLParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // SQLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLParser struct {
	*antlr.BaseParser
}

var SQLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlparserParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "'ALL'", "'ALIVE'", "'AND'", "'ANALYZE'", "'AS'", "'ASC'",
		"'BETWEEN'", "'BROKER'", "'BROKERS'", "'BY'", "'COMPACT'", "'CREATE'",
		"'CROSS'", "'COLUMNS'", "'DATABASE'", "'DATABASES'", "'DEFAULT'", "'DESC'",
		"'DISTRIBUTED'", "'DROP'", "'ENGINE'", "'ESCAPE'", "'EXPLAIN'", "'EXISTS'",
		"'FALSE'", "'FIELDS'", "'FLUSH'", "'FROM'", "'GROUP'", "'HAVING'", "'IF'",
		"'IN'", "'INTERVAL'", "'JOIN'", "'KEYS'", "'LEFT'", "'LIKE'", "'LIMIT'",
		"'LOG'", "'LOGICAL'", "'MASTER'", "'MEMORY_DATABASES'", "'METRICS'",
		"'METRIC'", "'METADATA'", "'METADATAS'", "'NAMESPACE'", "'NAMESPACES'",
		"'NOT'", "'NOW'", "'ON'", "'OR'", "'ORDER'", "'REQUESTS'", "'REPLICATIONS'",
		"'RIGHT'", "'ROLLUP'", "'SELECT'", "'SHOW'", "'STATE'", "'STORAGE'",
		"'TABLE_NAMES'", "'TIME'", "'TRACE'", "'TRUE'", "'TYPE'", "'TYPES'",
		"'VALUES'", "'WHERE'", "'WITH'", "'WITHIN'", "'USING'", "'USE'", "'SECOND'",
		"'MINUTE'", "'HOUR'", "'DAY'", "'MONTH'", "'YEAR'", "'='", "", "'<'",
		"'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=~'", "'!~'",
		"'!'", "'.'", "'('", "')'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "SIMPLE_COMMENT", "BRACKETED_COMMENT", "WS", "ALL", "ALIVE", "AND",
		"ANALYZE", "AS", "ASC", "BETWEEN", "BROKER", "BROKERS", "BY", "COMPACT",
		"CREATE", "CROSS", "COLUMNS", "DATABASE", "DATABASES", "DEFAULT", "DESC",
		"DISTRIBUTED", "DROP", "ENGINE", "ESCAPE", "EXPLAIN", "EXISTS", "FALSE",
		"FIELDS", "FLUSH", "FROM", "GROUP", "HAVING", "IF", "IN", "INTERVAL",
		"JOIN", "KEYS", "LEFT", "LIKE", "LIMIT", "LOG", "LOGICAL", "MASTER",
		"MEMORY_DATABASES", "METRICS", "METRIC", "METADATA", "METADATAS", "NAMESPACE",
		"NAMESPACES", "NOT", "NOW", "ON", "OR", "ORDER", "REQUESTS", "REPLICATIONS",
		"RIGHT", "ROLLUP", "SELECT", "SHOW", "STATE", "STORAGE", "TABLE_NAMES",
		"TIME", "TRACE", "TRUE", "TYPE", "TYPES", "VALUES", "WHERE", "WITH",
		"WITHIN", "USING", "USE", "SECOND", "MINUTE", "HOUR", "DAY", "MONTH",
		"YEAR", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "ASTERISK",
		"SLASH", "PERCENT", "REGEXP", "NEQREGEXP", "EXCLAMATION_SYMBOL", "DOT",
		"LR_BRACKET", "RR_BRACKET", "COMMA", "STRING", "INTEGER_VALUE", "DECIMAL_VALUE",
		"DOUBLE_VALUE", "IDENTIFIER", "DIGIT_IDENTIFIER", "QUOTED_IDENTIFIER",
		"BACKQUOTED_IDENTIFIER",
	}
	staticData.RuleNames = []string{
		"statement", "ddlStatement", "dmlStatement", "adminStatement", "utilityStatement",
		"explainOption", "createDatabase", "databaseOptions", "createDatabaseOptions",
		"rollupOptions", "dropDatabase", "createBroker", "flushDatabase", "compactDatabase",
		"showStatement", "useStatement", "query", "with", "namedQuery", "queryNoWith",
		"queryTerm", "queryPrimary", "querySpecification", "selectItem", "relation",
		"joinType", "joinCriteria", "aliasedRelation", "relationPrimary", "groupBy",
		"groupingElement", "groupingSet", "having", "orderBy", "sortItem", "limitRowCount",
		"expression", "booleanExpression", "valueExpression", "primaryExpression",
		"predicate", "comparisonOperator", "qualifiedName", "properties", "propertyAssignments",
		"property", "propertyValue", "booleanValue", "string", "identifier",
		"number", "interval", "intervalUnit", "nonReserved",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLParserInit initializes any static state used to implement SQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.once.Do(sqlparserParserInit)
}

// NewSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLParser(input antlr.TokenStream) *SQLParser {
	SQLParserInit()
	this := new(SQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SQLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SQLParser.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF                   = antlr.TokenEOF
	SQLParserSIMPLE_COMMENT        = 1
	SQLParserBRACKETED_COMMENT     = 2
	SQLParserWS                    = 3
	SQLParserALL                   = 4
	SQLParserALIVE                 = 5
	SQLParserAND                   = 6
	SQLParserANALYZE               = 7
	SQLParserAS                    = 8
	SQLParserASC                   = 9
	SQLParserBETWEEN               = 10
	SQLParserBROKER                = 11
	SQLParserBROKERS               = 12
	SQLParserBY                    = 13
	SQLParserCOMPACT               = 14
	SQLParserCREATE                = 15
	SQLParserCROSS                 = 16
	SQLParserCOLUMNS               = 17
	SQLParserDATABASE              = 18
	SQLParserDATABASES             = 19
	SQLParserDEFAULT               = 20
	SQLParserDESC                  = 21
	SQLParserDISTRIBUTED           = 22
	SQLParserDROP                  = 23
	SQLParserENGINE                = 24
	SQLParserESCAPE                = 25
	SQLParserEXPLAIN               = 26
	SQLParserEXISTS                = 27
	SQLParserFALSE                 = 28
	SQLParserFIELDS                = 29
	SQLParserFLUSH                 = 30
	SQLParserFROM                  = 31
	SQLParserGROUP                 = 32
	SQLParserHAVING                = 33
	SQLParserIF                    = 34
	SQLParserIN                    = 35
	SQLParserINTERVAL              = 36
	SQLParserJOIN                  = 37
	SQLParserKEYS                  = 38
	SQLParserLEFT                  = 39
	SQLParserLIKE                  = 40
	SQLParserLIMIT                 = 41
	SQLParserLOG                   = 42
	SQLParserLOGICAL               = 43
	SQLParserMASTER                = 44
	SQLParserMEMORY_DATABASES      = 45
	SQLParserMETRICS               = 46
	SQLParserMETRIC                = 47
	SQLParserMETADATA              = 48
	SQLParserMETADATAS             = 49
	SQLParserNAMESPACE             = 50
	SQLParserNAMESPACES            = 51
	SQLParserNOT                   = 52
	SQLParserNOW                   = 53
	SQLParserON                    = 54
	SQLParserOR                    = 55
	SQLParserORDER                 = 56
	SQLParserREQUESTS              = 57
	SQLParserREPLICATIONS          = 58
	SQLParserRIGHT                 = 59
	SQLParserROLLUP                = 60
	SQLParserSELECT                = 61
	SQLParserSHOW                  = 62
	SQLParserSTATE                 = 63
	SQLParserSTORAGE               = 64
	SQLParserTABLE_NAMES           = 65
	SQLParserTIME                  = 66
	SQLParserTRACE                 = 67
	SQLParserTRUE                  = 68
	SQLParserTYPE                  = 69
	SQLParserTYPES                 = 70
	SQLParserVALUES                = 71
	SQLParserWHERE                 = 72
	SQLParserWITH                  = 73
	SQLParserWITHIN                = 74
	SQLParserUSING                 = 75
	SQLParserUSE                   = 76
	SQLParserSECOND                = 77
	SQLParserMINUTE                = 78
	SQLParserHOUR                  = 79
	SQLParserDAY                   = 80
	SQLParserMONTH                 = 81
	SQLParserYEAR                  = 82
	SQLParserEQ                    = 83
	SQLParserNEQ                   = 84
	SQLParserLT                    = 85
	SQLParserLTE                   = 86
	SQLParserGT                    = 87
	SQLParserGTE                   = 88
	SQLParserPLUS                  = 89
	SQLParserMINUS                 = 90
	SQLParserASTERISK              = 91
	SQLParserSLASH                 = 92
	SQLParserPERCENT               = 93
	SQLParserREGEXP                = 94
	SQLParserNEQREGEXP             = 95
	SQLParserEXCLAMATION_SYMBOL    = 96
	SQLParserDOT                   = 97
	SQLParserLR_BRACKET            = 98
	SQLParserRR_BRACKET            = 99
	SQLParserCOMMA                 = 100
	SQLParserSTRING                = 101
	SQLParserINTEGER_VALUE         = 102
	SQLParserDECIMAL_VALUE         = 103
	SQLParserDOUBLE_VALUE          = 104
	SQLParserIDENTIFIER            = 105
	SQLParserDIGIT_IDENTIFIER      = 106
	SQLParserQUOTED_IDENTIFIER     = 107
	SQLParserBACKQUOTED_IDENTIFIER = 108
)

// SQLParser rules.
const (
	SQLParserRULE_statement             = 0
	SQLParserRULE_ddlStatement          = 1
	SQLParserRULE_dmlStatement          = 2
	SQLParserRULE_adminStatement        = 3
	SQLParserRULE_utilityStatement      = 4
	SQLParserRULE_explainOption         = 5
	SQLParserRULE_createDatabase        = 6
	SQLParserRULE_databaseOptions       = 7
	SQLParserRULE_createDatabaseOptions = 8
	SQLParserRULE_rollupOptions         = 9
	SQLParserRULE_dropDatabase          = 10
	SQLParserRULE_createBroker          = 11
	SQLParserRULE_flushDatabase         = 12
	SQLParserRULE_compactDatabase       = 13
	SQLParserRULE_showStatement         = 14
	SQLParserRULE_useStatement          = 15
	SQLParserRULE_query                 = 16
	SQLParserRULE_with                  = 17
	SQLParserRULE_namedQuery            = 18
	SQLParserRULE_queryNoWith           = 19
	SQLParserRULE_queryTerm             = 20
	SQLParserRULE_queryPrimary          = 21
	SQLParserRULE_querySpecification    = 22
	SQLParserRULE_selectItem            = 23
	SQLParserRULE_relation              = 24
	SQLParserRULE_joinType              = 25
	SQLParserRULE_joinCriteria          = 26
	SQLParserRULE_aliasedRelation       = 27
	SQLParserRULE_relationPrimary       = 28
	SQLParserRULE_groupBy               = 29
	SQLParserRULE_groupingElement       = 30
	SQLParserRULE_groupingSet           = 31
	SQLParserRULE_having                = 32
	SQLParserRULE_orderBy               = 33
	SQLParserRULE_sortItem              = 34
	SQLParserRULE_limitRowCount         = 35
	SQLParserRULE_expression            = 36
	SQLParserRULE_booleanExpression     = 37
	SQLParserRULE_valueExpression       = 38
	SQLParserRULE_primaryExpression     = 39
	SQLParserRULE_predicate             = 40
	SQLParserRULE_comparisonOperator    = 41
	SQLParserRULE_qualifiedName         = 42
	SQLParserRULE_properties            = 43
	SQLParserRULE_propertyAssignments   = 44
	SQLParserRULE_property              = 45
	SQLParserRULE_propertyValue         = 46
	SQLParserRULE_booleanValue          = 47
	SQLParserRULE_string                = 48
	SQLParserRULE_identifier            = 49
	SQLParserRULE_number                = 50
	SQLParserRULE_interval              = 51
	SQLParserRULE_intervalUnit          = 52
	SQLParserRULE_nonReserved           = 53
)

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DdlStatement() IDdlStatementContext
	DmlStatement() IDmlStatementContext
	AdminStatement() IAdminStatementContext
	UtilityStatement() IUtilityStatementContext
	EOF() antlr.TerminalNode

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) DdlStatement() IDdlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDdlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDdlStatementContext)
}

func (s *StatementContext) DmlStatement() IDmlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDmlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDmlStatementContext)
}

func (s *StatementContext) AdminStatement() IAdminStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAdminStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAdminStatementContext)
}

func (s *StatementContext) UtilityStatement() IUtilityStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUtilityStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUtilityStatementContext)
}

func (s *StatementContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLParserEOF, 0)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_statement)
	p.SetState(114)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SQLParserCREATE, SQLParserDROP:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(108)
			p.DdlStatement()
		}

	case SQLParserEXPLAIN, SQLParserSELECT, SQLParserWITH, SQLParserLR_BRACKET:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(109)
			p.DmlStatement()
		}

	case SQLParserCOMPACT, SQLParserFLUSH, SQLParserSHOW:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(110)
			p.AdminStatement()
		}

	case SQLParserUSE:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(111)
			p.UtilityStatement()
		}
		{
			p.SetState(112)
			p.Match(SQLParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDdlStatementContext is an interface to support dynamic dispatch.
type IDdlStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CreateDatabase() ICreateDatabaseContext
	DropDatabase() IDropDatabaseContext
	CreateBroker() ICreateBrokerContext

	// IsDdlStatementContext differentiates from other interfaces.
	IsDdlStatementContext()
}

type DdlStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDdlStatementContext() *DdlStatementContext {
	var p = new(DdlStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_ddlStatement
	return p
}

func InitEmptyDdlStatementContext(p *DdlStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_ddlStatement
}

func (*DdlStatementContext) IsDdlStatementContext() {}

func NewDdlStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DdlStatementContext {
	var p = new(DdlStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_ddlStatement

	return p
}

func (s *DdlStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *DdlStatementContext) CreateDatabase() ICreateDatabaseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateDatabaseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateDatabaseContext)
}

func (s *DdlStatementContext) DropDatabase() IDropDatabaseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDropDatabaseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDropDatabaseContext)
}

func (s *DdlStatementContext) CreateBroker() ICreateBrokerContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateBrokerContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateBrokerContext)
}

func (s *DdlStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DdlStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DdlStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterDdlStatement(s)
	}
}

func (s *DdlStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitDdlStatement(s)
	}
}

func (s *DdlStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLParserVisitor:
		return t.VisitDdlStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLParser) DdlStatement() (localctx IDdlStatementContext) {
	localctx = NewDdlStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLParserRULE_ddlStatement)
	p.SetState(119)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(116)
			p.CreateDatabase()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(117)
			p.DropDatabase()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(118)
			p.CreateBroker()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDmlStatementContext is an interface to support dynamic dispatch.
type IDmlStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsDmlStatementContext differentiates from other interfaces.
	IsDmlStatementContext()
}

type DmlStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDmlStatementContext() *DmlStatementContext {
	var p = new(DmlStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_dmlStatement
	return p
}

func InitEmptyDmlStatementContext(p *DmlStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_dmlStatement
}

func (*DmlStatementContext) IsDmlStatementContext() {}

func NewDmlStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DmlStatementContext {
	var p = new(DmlStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_dmlStatement

	return p
}

func (s *DmlStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *DmlStatementContext) CopyAll(ctx *DmlStatementContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *DmlStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DmlStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
